[gd_scene load_steps=8 format=3 uid="uid://dph4n4xec1rp0"]

[ext_resource type="Script" path="res://rafael/arrow_missile.gd" id="1_vhdka"]
[ext_resource type="Texture2D" uid="uid://cv1l2mg1cgq3s" path="res://assets/rocket1.png" id="2_xvvfw"]
[ext_resource type="Script" path="res://components/move_component.gd" id="3_rpw6q"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="4_g7w12"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="5_7d5fj"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="6_gebgt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ij2m5"]
size = Vector2(4, 10)

[node name="ArrowMissile" type="Node2D"]
script = ExtResource("1_vhdka")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.23517e-08, 2.98023e-08)
rotation = -3.14159
scale = Vector2(0.124637, 0.126428)
texture = ExtResource("2_xvvfw")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_rpw6q")
actor = NodePath("..")
velocity = Vector2(0, -200)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.2, 0.45)

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_g7w12")
sprite = NodePath("../Sprite2D")
scale_amount = Vector2(2, 2)
scale_duration = 1.0

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_7d5fj")
sprite = NodePath("../Sprite2D")
flash_duration = 0.1

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("6_gebgt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_ij2m5")
debug_color = Color(0.843137, 0.345098, 0.431373, 0)
